--- a/src/ROS2_ur_moveit_examples/package.xml
+++ b/src/ROS2_ur_moveit_examples/package.xml
@@ -28,6 +28,7 @@
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2_ros</depend>
   <depend>moveit_task_constructor_core</depend>
+  <depend>ur_custom_interfaces</depend>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>eigen</build_depend>
