--- a/src/ur_mover/CMakeLists.txt
+++ b/src/ur_mover/CMakeLists.txt
@@ -40,4 +40,8 @@ install(TARGETS
   master_node
   DESTINATION lib/${PROJECT_NAME})
 
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
 ament_package()
