--- a/src/camera_control/package.xml
+++ b/src/camera_control/package.xml
@@ -9,6 +9,7 @@
 
   <depend>rclpy</depend>
   <depend>ur_custom_interfaces</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
